# footpipe-XL

./: .env.example  .env.local.example  .gitignore  .mcp.json  AGENTS.md  Makefile  README.md  docker-compose.yml
.agents/: oma-config.yaml
.agents/skills/: _version.json
.cursor/: environment.json  hooks.json  mcp.json
.cursor/hooks/: oma-hook.sh
.serena/: project.yml
apps/pipeline/: Dockerfile  entrypoint-api.sh  entrypoint-worker.sh  pyproject.toml
apps/pipeline/migrations/: env.py
apps/pipeline/migrations/versions/: 0001_initial.py  0002_document_metadata.py
apps/pipeline/pipeline/: __init__.py  api.py  categories.py  config.py  db.py  docparse.py  jobs.py  models.py  objectstore.py  pdfutil.py  queue.py  schemas.py  smoke.py  split_logic.py  worker.py
apps/pipeline/pipeline/providers/: __init__.py  azure_ocr.py  base.py  fake_llm.py  fake_ocr.py  openai_llm.py  paperless.py  registry.py
apps/pipeline/tests/: test_commit_archive.py  test_docparse.py  test_enrich_run.py  test_enrichment_normalize.py  test_fake_providers.py  test_get_batch.py  test_live_providers.py  test_paperless_metadata.py  test_pdfutil.py  test_registry_live.py  test_smoke_assertions.py  test_split_content.py  test_split_logic.py
config/: categories.yaml
docs/: api-contract.md  cloud-secrets.md  design.md  eval-corpus.md  operator-guide.md  ops-setup.md  plan.md  scanner-epson-es580w.md
fixtures/: gen_fixtures.py
fixtures/invoices-3/: expected.json
fixtures/mixed-mail/: expected.json
scripts/: landing-watch.py  live-upload.sh  retry_snubbed.py  sync-env.sh  sync_env.py
(+3 files in other folders)
